2009-04-20 Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c (dump_stack_value): Fix compilation with extra debug turned on.

	* verify.c (do_initobj): Improve error message.

2009-04-20 Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-verify.c: Enable pe verification as the issue with #496453
	is that the authenticode data directory have a different unspecified
	format. Ignore it for now.

	* pedump.c: Run the metadata verifier together with the IL verifier.

	Fixes ##496453.

2009-04-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* metadata-verify.c: Temporarily disable pe verification due to #496453.

2009-04-17 Rodrigo Kumpera  <rkumpera@novell.com>

	* class.c (can_access_type): Check visibility against
	the element type for pointers and arrays.

	Fixes #496150.

2009-04-17 Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-verify.c: Fix cli and table verification to use information
	from the MonoImage. A lot of duplicated code got killed.

2009-04-17 Rodrigo Kumpera  <rkumpera@novell.com>


	This patch starts to integrate the metadata verifier with the runtime code.

	This patch causes major regression in functionality for the metadata verifier
	as cli and table verification are disabled since they require to be ported to
	use MonoImage information.

	* image.c (do_mono_image_load): Split the code in this function
	into mono_image_load_pe_data and mono_image_load_cli_data.
	Add	care_about_pecoff parameter to not load pecoff data.
	Call into the metadata verifier for pecoff and cli verification.

	* image.c (mono_image_open_raw): New function that doesn't perform
	any parsing of the image contents.
	
	The reason for the 3 new functions is to give pedump better control
	into the interaction with the verifier.

	* metadata-internals.h: Add new functions from image.c as part of the
	internal mono API.

	* metadata-verify.c: Split mono_image_verify into mono_verifier_verify_pe_data,
	mono_verifier_verify_cli_data and mono_verifier_verify_table_data. Prepare